# nc-demo

./: CMakeLists.txt  backend.cpp  backend.h  main.cpp  main.qml
data/: global.cpp  global.h
net/: TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
